--- a/W3 JS/w3s8js.html
+++ b/W3 JS/w3s8js.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>javascript in body</title>
 </head>
 <body>
-    Hiiiii
+    <h2>javascript in body</h2>
+    <p id="demo">a paragraph</p>
+    <button type="button" onclick="myfunction()">click it!</button>
+    <script>
+        function myfunction() {
+            document.getElementById("demo").innerHTML= "paragraph changed" ;
+        }
+    </script>
 </body>
 </html>
