--- a/JS-Practice/p1.html
+++ b/JS-Practice/p1.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- if you want to link js file use defer after it -->
+    <!-- <script src="p1.js" defer></script> -->
 </head>
 <body>
    <h2>hello world</h2>
 
-    <script src="p1.js"></script>
+    <!-- <script src="p1.js"></script> -->
+    <script src="p2.js"></script>
 </body>
 </html>
