--- a/JS-Practice/p1.html
+++ b/JS-Practice/p1.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- if you want to link js file use defer after it -->
+    <!-- if you want to link js file in HEAD use defer after it -->
     <!-- <script src="p1.js" defer></script> -->
 </head>
 <body>
    <h2>hello world</h2>
 
     <!-- <script src="p1.js"></script> -->
-    <script src="p2.js"></script>
+    <!-- <script src="p2.js"></script> -->
+    <!-- <script src="p3.js"></script> -->
+    <!-- <script src="p4.js"></script> -->
+    <!-- <script src="p5.js"></script> -->
+    <!-- <script src="p6.js"></script> -->
+    <!-- <script src="p7.js"></script> -->
+    <!-- <script src="p8.js"></script> -->
+    <!-- <script src="p9.js"></script> -->
+    <script src="p10.js"></script>
+
 </body>
 </html>
